--- a/core/pages/login.html
+++ b/core/pages/login.html
@@ -10,7 +10,7 @@
 			<div style="text-align: center;">
 				<img src="https://cdn.discordapp.com/attachments/1056074242325741578/1056074861690224720/legoproxy.png" alt="LegoProxy"><br>
 				<text style="font-size: 50px;"><text style="font-size: 50px; color: #75b2eb;">Lego</text><text style="font-size: 50px; color: #87d997;">Proxy</text> Dashboard</text><br>
-				<text style="font-size: 20px;">Running LegoProxy v1.7</text>
+				<text style="font-size: 20px;">Running Version v2</text>
 			</div>
 	
 			<div style="text-align: center; align-items: center;"><br>
@@ -20,8 +20,12 @@
 		</form>
 
 		<div class="container" style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px 20px;">
-			<button style="height: 25px; width: 102%;" onclick="location.href='/docs'">Documentation</button>
+			<button style="height: 25px; width: 102%;" onclick="location.href='https://github.com/PyTsun/LegoProxy#legoproxy-usage'">Proxy Usage</button>
 			<button style="height: 25px; width: 102%;" onclick="location.href='https://discord.gg/SnmVQ4NSTz'">Discord</button>
+		</div>
+
+		<div style="text-align: center;">
+			<br><text style="font-size: 20px;"><text style="font-size: 20px; color: #75b2eb;">Lego</text><text style="font-size: 20px; color: #87d997;">Proxy</text> by FundleBox</text>
 		</div>
     </div>
 </body>
